tests/neg/i7359.scala
trait SAMTrait:
  def first(): String
  def notify(): Unit // error
