tests/neg/i7359.check
-- [E164] Declaration Error: tests/neg/i7359.scala:3:6 -----------------------------------------------------------------
3 |  def notify(): Unit // error
  |      ^
  |      error overriding method notify in class Object of type (): Unit;
  |        method notify of type (): Unit cannot override final member method notify in class Object
